# ftditerm

./: .gitignore  configure.ac
src/: Makefile.am  ftditerm.c  io.c  io.h
